# HanziIDSComponentExplorer

./: CHANGELOG.md  HanziComponentExplorer-CleanUI-v1.6.4-README.md  NOTICE  README.md  pyproject.toml
.github/workflows/: update-ids-data.yml
HanziComponentExplorerRS+.glyphsPlugin/Contents/: Info.plist
HanziComponentExplorerRS+.glyphsPlugin/Contents/Resources/: glyphs_adapter.py  glyphs_ui.py  hanzi_core.py  localization.py  plugin.py
HanziComponentExplorerRSplus.glyphsPlugin/Contents/: Info.plist
HanziComponentExplorerRSplus.glyphsPlugin/Contents/Resources/: glyph_status.py  glyphs_adapter.py  glyphs_ui.py  hanzi_core.py  localization.py  plugin.py
HanziIDSComponentExplorer.glyphsPlugin/Contents/: Info.plist
HanziIDSComponentExplorer.glyphsPlugin/Contents/Resources/: glyph_status.py  glyphs_adapter.py  glyphs_ui.py  hanzi_core.py  localization.py  plugin.py
HanziIDSComponentExplorer.glyphsPlugin/Contents/Resources/data/: ids.pdata
scripts/: build_ids.py  ids_generator.py
tests/: test_classify_by_position.py  test_hanzi_core_modern_tree.py  test_hanzi_core_search.py  test_hanzi_core_strokes.py  test_ids_generator.py  test_resolve_display_char.py
