[project]
name = "hanzi-component-explorer-rsplus"
version = "1.6.4-gui"
description = "Glyphs plugin for exploring Chinese character IDS components"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "TzuYuan Yin", email = "yintzuyuan@erikyin.net"}
]
maintainers = [
    {name = "Ooma Kobayashi"}
]

dependencies = [
    "python-dotenv>=1.0.0",
]

[project.urls]
"Fork maintainer" = "https://ooma.jp"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# 本專案為 Glyphs 外掛，不發佈為 Python 套件。
# pyproject.toml 僅用於 uv / pytest 等開發工具，因此明確宣告無 top-level module，
# 避免 setuptools 在 data/ 與 LICENSES/ 之間做自動 package 探索時失敗。
[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
